--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <footer>
 
-        <p text-ali>this is my leader board</p>
+        <p text-ali>this is my leader board .</p>
 
     </footer>
 
